--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,11 @@
-:root {
-  /* text colors */
-  --title-color: #2e2f42;
-  --subtitle-color: #2e2f42;
-  --text-color: #434455;
-  --footer-text-color: #e7e9fc;
-  --logo-main-color: #4d5ae5;
-  --logo-part-header-color: #2e2f42;
-  --logo-part-footer-color: #f4f4fd;
-  --hero-color: #ffffff;
-  --hero-btn-color: #ffffff;
-  --btn-color: #4d5ae5;
-  --accent-btn-color: #ffffff;
-  --accent-link-color: #4d5ae5;
-
-  /* background colors */
-  --main-background: #ffffff;
-  --hero-background: #2e2f42;
-  --hero-btn-background: #4d5ae5;
-  --ourteam-background: #f4f4fd;
-  --footer-background: #2e2f42;
-  --btn-background: #f4f4fd;
-  --accent-btn-background: #404bbf;
-
-  /* border colors */
-  --border-color: #e7e9fc;
+html {
+  box-sizing: border-box;
 }
 
-/* GENERAL style */
-
-body {
-  font-family: "Roboto", sans-serif;
-  color: var(--text-color);
-  background-color: var(--main-background);
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
 h1,
@@ -46,8 +20,59 @@ p {
 
 ul {
   margin: 0;
-  padding-left: 0;
+  padding: 0;
+  list-style-type: none;
 }
+
+.link {
+  text-decoration: none;
+}
+
+/* .list {
+  list-style: none;
+} */
+
+:root {
+  /* text colors */
+  --title-color: #2e2f42;
+  --subtitle-color: #2e2f42;
+  --text-color: #434455;
+  --footer-text-color: #e7e9fc;
+  --logo-main-color: #4d5ae5;
+  --logo-part-header-color: #2e2f42;
+  --logo-part-footer-color: #f4f4fd;
+  --hero-color: #ffffff;
+  --hero-btn-color: #ffffff;
+  --btn-color: #4d5ae5;
+  --accent-btn-color: #ffffff;
+  --accent-link-color: #4d5ae5;
+  --costomers-color: #8E8F99;
+  --accent-costomers-color:#404bbf;
+  --social-footer-color: #ffffff;
+  --footer-subtitle-color: #ffffff;
+
+  /* background colors */
+  --main-background: #ffffff;
+  --hero-background: #2e2f42;
+  --hero-btn-background: #4d5ae5;
+  --ourteam-background: #f4f4fd;
+  --footer-background: #2e2f42;
+  --btn-background: #f4f4fd;
+  --accent-btn-background: #404bbf;
+  --accent-footer-social-color:#31D0AA;
+
+  /* border colors */
+  --border-color: #e7e9fc;
+}
+
+/* GENERAL style */
+
+body {
+  font-family: "Roboto", sans-serif;
+  color: var(--text-color);
+  background-color: var(--main-background);
+}
+
 
 img {
   display: block;
@@ -73,14 +98,6 @@ img {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   margin: -1px;
-}
-
-.link {
-  text-decoration: none;
-}
-
-.list {
-  list-style: none;
 }
 
 /* LOGO style */
@@ -174,10 +191,23 @@ img {
 
 /* FOOTER style */
 
+/* FOOTER style */
+
 .footer {
   background-color: var(--footer-background);
   padding-top: 100px;
   padding-bottom: 100px;
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-container-content {
+  padding-right: 120px;
 }
 
 .footer-desc {
@@ -187,6 +217,50 @@ img {
   color: var(--footer-text-color);
   margin-top: 16px;
   max-width: 264px;
+}
+
+/* .footer-container-soc {
+} */
+
+.footer-soc-subtitle {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--footer-subtitle-color);
+  margin-bottom: 16px;
+}
+
+.footer-soc-list {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+}
+
+.footer-soc-item {
+  flex-basis: calc((100% - 48) / 3);
+  width: 40px;
+  height: 40px;
+}
+
+.footer-soc-link {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--social-footer-color);
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+  background-color: var(--accent-footer-social-color);
+}
+
+.footer-soc-icon {
+  fill: currentColor;
 }
 
 /* INDEX.HTML BODY style */
@@ -236,6 +310,9 @@ img {
 /* HERO style */
 
 .hero {
+  background-image:linear-gradient(to top, rgba(46, 47, 66, 0.7),  rgba(46, 47, 66, 0.7)), url(../images/people_office.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: var(--hero-background);
   padding-top: 192px;
   padding-bottom: 192px;
@@ -270,11 +347,6 @@ img {
 
 /* FEATURES style */
 
-/* .features {
-} */
-
-/* .features-title {
-} */
 
 .features-list {
   display: flex;
@@ -289,8 +361,18 @@ img {
   margin-bottom: 8px;
 }
 
-/* .features-desc {
-} */
+.feature-icon-box{
+  background-color:var(--btn-background) ;
+  width: 264px;
+  height: 112px;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
+
+.features-icons{
+  margin: 24px 100px;
+}
+
 
 /* WHATWEDO style */
 
@@ -352,7 +434,93 @@ img {
 
 .ourteam-desc {
   text-align: center;
+  margin-bottom: 8px;
 }
+
+/* .team-icon-box{
+  display: flex;
+  gap: 24px;
+background-color: var(--accent-link-color);
+width: 40px;
+height: 40px;
+border-radius: 40px ;
+} */
+
+.team-icons{
+  fill: currentColor;
+  color: var(--logo-part-footer-color);
+}
+
+.team-icon-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  /* margin-top: 8px; */
+}
+
+.team-icon-item {
+  /* flex-basis: calc((100% - 72px) / 4); */
+  width: 40px;
+  height: 40px;
+  background-color: var(--accent-link-color);
+  border-radius: 50%;
+}
+
+.team-icon-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-icon-item:hover,
+.team-icon-item:focus {
+  background-color: var(--accent-btn-background);
+}
+
+
+/* CUSTOMERS style */
+
+.customers {
+  padding-top: 130px;
+}
+
+.customers-title {
+  margin-bottom: 72px;
+}
+
+.customers-list {
+  display: flex;
+  gap: 24px;
+}
+
+.customers-item {
+  flex-basis: calc((100% - 5 * 24px) / 6);
+}
+
+.customers-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--costomers-color);
+  height: 88px;
+  border: 1px solid;
+  border-color: var(--costomers-color);
+  border-radius: 4px;
+}
+
+.customers-icon {
+  fill: currentColor;
+}
+
+.customers-link:is(:hover, :focus) {
+  border-color: var(--accent-costomers-color);
+  color: var(--accent-costomers-color);
+}
+
 
 /* PORTFOLIO.HTML BODY style */
 
