--- a/css/styles.css
+++ b/css/styles.css
@@ -362,6 +362,9 @@ img {
 }
 
 .feature-icon-box{
+  display: flex;
+    justify-content: center;
+    align-items: center;
   background-color:var(--btn-background) ;
   width: 264px;
   height: 112px;
@@ -369,9 +372,12 @@ img {
   margin-bottom: 8px;
 }
 
-.features-icons{
-  margin: 24px 100px;
-}
+/* .features-icons{
+  display: flex;    
+    justify-content: center;
+    align-items: center; */
+  /* margin: 24px 100px;
+} */
 
 
 /* WHATWEDO style */
@@ -474,11 +480,10 @@ border-radius: 40px ;
   justify-content: center;
 }
 
-.team-icon-item:hover,
-.team-icon-item:focus {
+.team-icon-item:hover, 
+.team-icon-item:focus{
   background-color: var(--accent-btn-background);
 }
-
 
 /* CUSTOMERS style */
 
@@ -585,6 +590,11 @@ border-radius: 40px ;
 
 .pfolio-card-subtitle {
   margin-bottom: 8px;
+}
+
+.port-card-box:hover,
+.port-card-box:focus {
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 /* .pfolio-card-desc {
