--- a/css/styles.css
+++ b/css/styles.css
@@ -317,6 +317,8 @@ img {
   padding-top: 192px;
   padding-bottom: 192px;
   text-align: center;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .hero-title {
@@ -454,7 +456,6 @@ border-radius: 40px ;
 
 .team-icons{
   fill: currentColor;
-  color: var(--logo-part-footer-color);
 }
 
 .team-icon-list {
@@ -476,12 +477,16 @@ border-radius: 40px ;
   width: 100%;
   height: 100%;
   display: flex;
+color: var(--logo-part-footer-color);
   align-items: center;
   justify-content: center;
 }
 
-.team-icon-item:hover, 
-.team-icon-item:focus{
+.team-icon-link:hover, 
+.team-icon-link:focus{
+  width: 40px;
+    height: 40px;
+    border-radius: 50%;
   background-color: var(--accent-btn-background);
 }
 
@@ -590,6 +595,7 @@ border-radius: 40px ;
 
 .pfolio-card-subtitle {
   margin-bottom: 8px;
+  color: var(--subtitle-color);
 }
 
 .port-card-box:hover,
@@ -597,5 +603,7 @@ border-radius: 40px ;
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-/* .pfolio-card-desc {
-} */
+.pfolio-card-desc {
+  color: var(--text-color);
+}
+
